[metadata]
name = black-night
version = attr: black_night.__version__
author = 00 Team
author_email = 00.team.mail@gmail.com
description = Django Admin Skin-ish
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
url = https://github.com/00-team/black-night
project_urls =
    Source = https://github.com/00-team/black-night/
    Tracker = https://github.com/00-team/black-night/issues
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Site Management

[options]
packages = find:
python_requires = >=3.10
